--- a/Progetto_Home.html
+++ b/Progetto_Home.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 <div id="Header">
-	<a id="logo" href="#Home"><img id="logo" src="logo.jpeg" alt="Home Button/Logo" /></a>
+	<a href="#Home"><img id="logo" src="logo.jpeg" alt="Home Button/Logo" /></a>
+	
+	<img id="logoit" src="italia.jpg" alt="Bandiera italiana/Lingua italiana"/>
 	<h3 id="Areapersonale"><a href="#areapersonale">Area Personale</a></h3>	
-</div>
-<ul id="Menu">
+	
+	<ul id="Menu">
 		<div id="pos">
   			<li><a href="#Home">Home</a></li>
   			<li><a href="#News">News</a></li>
@@ -20,5 +22,20 @@
 			<li><a href="#dovesiamo">Dove Trovarci</a></li>
 		</div>
 	</ul>
+</div>
+
+<div id="Footer">
+	<div id="luogo">
+	<p>Vieni a trovarci in:</p>
+	<p>Via Cavour, 18-30014 Cavarzere(VE)</p>
+	</div>
+	<div id="contatti">
+	<p>Contattaci</p>
+	<p>340-7998194</p>
+	</div>
+
+	<p id="diritti">Palestra A.S.D. Body Evolution - All rights reserved</p>
+</div>
+
 </body>
 </html>
