--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="Intestazione">
-		<a href="Home.html"><img id="logo" src="logo.jpg" alt="Body Evolution logo"/></a>
+		<a href="Home.html"><img id="logo" src="logoEllisseCon2L.png" alt="Body Evolution logo"/></a>
 	</div>
 	
 	<div id="Menu">
@@ -37,3 +37,4 @@
 
 </body>
 </html>
+
