--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,14 +4,14 @@
 <head>
 	<title>Body Evolution</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link href="Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
-	<link href="Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
-	<link href="Print.css" rel="stylesheet" type="text/css" media="print"/>
+	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
+	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
+	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 </head>
 
 <body>
 	<div id="Intestazione">
-		<a href="Home.html"><img id="logo" src="logoEllisseCon2L.png" alt="Body Evolution logo"/></a>
+		<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 	</div>
 	
 	<div id="Menu">
