--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -20,10 +20,11 @@
 			<li><a href="Palestra.html">Palestra</a></li>
 			<li><a href="#Attivita">Attivit&agrave;</a></li>
 			<li><a href="#News">News</a></li>
+			<li><a href="#Galleria">Galleria</a></li>
 			<li><a href="#Calendario">Calendario</a></li>
 			<li><a href="#ChiSiamo">Chi siamo</a></li>
 			<li><a href="#DoveSiamo">Dove siamo</a></li>
-			<li><a href="#Contatti">Contatti</a></li>
+			<li><a href="#AreaPersonale">Area Personale</a></li>
 		</ul>
 	</div>
 
