--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -12,30 +12,32 @@
 <body>
 	<div id="Intestazione">
 		<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
+		<div id="Menu">
+			<ul>
+				<li><a class="active" href="Home.html">Home</a></li>
+				<li><a href="Palestra.html">Palestra</a></li>
+				<li><a href="#Attivita">Attivit&agrave;</a></li>
+				<li><a href="#News"><span xml:lang="en">News</span></a></li>
+				<li><a href="#Galleria">Galleria</a></li>
+				<li><a href="#Calendario">Calendario</a></li>
+				<li><a href="#ChiSiamo">Chi siamo</a></li>
+				<li><a href="#DoveSiamo">Dove siamo</a></li>
+				<li><a href="#AreaPersonale">Area Personale</a></li>
+			</ul>
+		</div>
 	</div>
 	
-	<div id="Menu">
-		<ul>
-			<li><a class="active" href="Home.html">Home</a></li>
-			<li><a href="Palestra.html">Palestra</a></li>
-			<li><a href="#Attivita">Attivit&agrave;</a></li>
-			<li><a href="#News">News</a></li>
-			<li><a href="#Galleria">Galleria</a></li>
-			<li><a href="#Calendario">Calendario</a></li>
-			<li><a href="#ChiSiamo">Chi siamo</a></li>
-			<li><a href="#DoveSiamo">Dove siamo</a></li>
-			<li><a href="#AreaPersonale">Area Personale</a></li>
-		</ul>
-	</div>
-
 	<div id="Descrizione">
-	
+		<img id="Sfondo" src="../IMAGES/Sfondo.jpg" alt="Sfondo temporaneo"/>
 	</div>
 
 	<div id="Footer">
-	
+		<img id="Coni" src="../IMAGES/Coni.png" alt="Affiliazione Coni"/>
+		<img id="asi" src="../IMAGES/Asi.png" alt="Affiliazione asi"/>
+		<p><span xml:lang="en">Copyright</span> &copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> a.s.d. - Tutti i diritti
+		riservati. - P.IVA 00000000000 - VIA CAVOUR 18 - 30014 - CAVARZERE (VE)<br>
+		Tel: 340-9473426 | E-mail: body_evolution@libero.it | Facebook: BodyEvolutionPalestra</p>
 	</div>
 
 </body>
 </html>
-
