--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -35,7 +35,7 @@
 		<img id="Coni" src="../IMAGES/Coni.png" alt="Affiliazione Coni"/>
 		<img id="asi" src="../IMAGES/Asi.png" alt="Affiliazione asi"/>
 		<p><span xml:lang="en">Copyright</span> &copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> a.s.d. - Tutti i diritti
-		riservati. - P.IVA 00000000000 - VIA CAVOUR 18 - 30014 - CAVARZERE (VE)<br>
+		riservati. - P.IVA 00000000000 - VIA CAVOUR 18, 30014 - CAVARZERE (VE)<br>
 		Tel: 340-9473426 | E-mail: body_evolution@libero.it | Facebook: BodyEvolutionPalestra</p>
 	</div>
 
