--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -7,9 +7,11 @@
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+	<div id="contenitore">
 	<div id="Intestazione">
 		<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 		<div id="Menu">
@@ -35,9 +37,10 @@
 		<img id="Coni" src="../IMAGES/Coni.png" alt="Affiliazione Coni"/>
 		<img id="asi" src="../IMAGES/Asi.png" alt="Affiliazione asi"/>
 		<p><span xml:lang="en">Copyright</span> &copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> a.s.d. - Tutti i diritti
-		riservati. - P.IVA 00000000000 - VIA CAVOUR 18, 30014 - CAVARZERE (VE)<br>
+		riservati. - P.IVA 00000000000 - VIA CAVOUR 18, 30014 - CAVARZERE (VE) </br>
 		Tel: 340-9473426 | E-mail: body_evolution@libero.it | Facebook: BodyEvolutionPalestra</p>
 	</div>
+</div>
 
 </body>
 </html>
