--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -18,13 +18,13 @@
 			<ul>
 				<li><a class="active" href="Home.html">Home</a></li>
 				<li><a href="Palestra.html">Palestra</a></li>
-				<li><a href="#Attivita">Attivit&agrave;</a></li>
-				<li><a href="#News"><span xml:lang="en">News</span></a></li>
-				<li><a href="#Galleria">Galleria</a></li>
-				<li><a href="#Calendario">Calendario</a></li>
-				<li><a href="#ChiSiamo">Chi siamo</a></li>
-				<li><a href="#DoveSiamo">Dove siamo</a></li>
-				<li><a href="#AreaPersonale">Area Personale</a></li>
+				<li><a href="Attivita.html">Attivit&agrave;</a></li>
+				<li><a href="News.html"><span xml:lang="en">News</span></a></li>
+				<li><a href="Galleria.html">Galleria</a></li>
+				<li><a href="Calendario.html">Calendario</a></li>
+				<li><a href="ChiSiamo.html">Chi siamo</a></li>
+				<li><a href="DoveSiamo.html">Dove siamo</a></li>
+				<li><a href="AreaPersonale.html">Area Personale</a></li>
 			</ul>
 		</div>
 	</div>
