--- a/HTML/Palestra.html
+++ b/HTML/Palestra.html
@@ -16,15 +16,14 @@
 		<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 		<div id="Menu">
 			<ul>
-				<li><a href="Home.html">Home</a></li>
 				<li><a class="active" href="Palestra.html">Palestra</a></li>
-				<li><a href="#Attivita">Attivit&agrave;</a></li>
-				<li><a href="#News"><span xml:lang="en">News</span></a></li>
-				<li><a href="#Galleria">Galleria</a></li>
-				<li><a href="#Calendario">Calendario</a></li>
+				<li><a href="Attivita.html">Attivit&agrave;</a></li>
+				<li><a href="News.html"><span xml:lang="en">News</span></a></li>
+				<li><a href="Galleria.html">Galleria</a></li>
+				<li><a href="Calendario.html">Calendario</a></li>
 				<li><a href="ChiSiamo.html">Chi siamo</a></li>
-				<li><a href="#DoveSiamo">Dove siamo</a></li>
-				<li><a href="#AreaPersonale"><nobr>Area Personale</nobr></a></li>
+				<li><a href="DoveSiamo.html">Dove siamo</a></li>
+				<li><a href="AreaPersonale.html">Area Personale</a></li>
 			</ul>
 		</div>
 	</div>
