--- a/HTML/ChiSiamo.html
+++ b/HTML/ChiSiamo.html
@@ -35,6 +35,7 @@
 				<div id="GennyTiengo">
 					<img id="GennyTiengoImg" src="../IMAGES/GennyTiengo.jpg" alt="Foto Genny Tiengo"/>
 					<h2>Genny Tiengo</h2>
+					<div class="separator"></div>
 					<ul>
 						<li>Dirigente sportivo Coni</li>
 						<li>Istruttore (Spinning, Fit Boxe, Power Pump, Jump Fit, Step, Pilates, Riabilitazione, Gestanti)</li>
@@ -45,6 +46,7 @@
 				<div id="FabioFerro">
 					<img id="FabioFerroImg" src="../IMAGES/FabioFerro.jpg" alt="Foto Fabio Ferro"/>
 					<h2>Fabio Ferro</h2>
+					<div class="separator"></div>
 					<ul>
 						<li>Preparatore atletico</li>
 						<li>Istruttore Kick Boxing</li>
