--- a/HTML/ChiSiamo.html
+++ b/HTML/ChiSiamo.html
@@ -34,7 +34,7 @@
 				<img id="ChiSiamoImg" src="../IMAGES/ChiSiamo.jpg" alt="Immagine Chi Siamo"/>
 				<div id="GennyTiengo">
 					<img id="GennyTiengoImg" src="../IMAGES/GennyTiengo.jpg" alt="Foto Genny Tiengo"/>
-					<h2>Genny Tiengo</h2>
+					<h2>GENNY TIENGO</h2>
 					<div class="separator"></div>
 					<ul>
 						<li>Dirigente sportivo Coni</li>
@@ -45,7 +45,7 @@
 				</div>
 				<div id="FabioFerro">
 					<img id="FabioFerroImg" src="../IMAGES/FabioFerro.jpg" alt="Foto Fabio Ferro"/>
-					<h2>Fabio Ferro</h2>
+					<h2>FABIO FERRO</h2>
 					<div class="separator"></div>
 					<ul>
 						<li>Preparatore atletico</li>
