--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -38,7 +38,7 @@ for (i = 0; i < acc.length; i++) {
 			<ul>
 				<li><a href="Home.html">Home</a></li>
 				<li><a href="Palestra.html">Palestra</a></li>
-				<li><a class="active"> href="Attivita.html" Attivit&agrave;</a> </li>
+				<li><a class="active">Attivit&agrave;</a> </li>
 				<li><a href="News.html"><span xml:lang="en">News</span></a></li>
 				<li><a href="Galleria.html">Galleria</a></li>
 				<li><a href="Calendario.html">Calendario</a></li>
