--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -47,7 +47,7 @@
 							animation: google.maps.Animation.BOUNCE
 						});
 						marker.setMap(map);
-						// Zoom to 9 when clicking on marker
+						//Zoom a 18 quando si clicca nel marker 
 						google.maps.event.addListener(marker,'click',function() {
 						map.setZoom(18);
 						map.setCenter(marker.getPosition());
