--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -28,61 +28,64 @@
 	</div>
 	
 	<div id="Descrizione">
-	<ul id="AccordionMenu"> 
-		<li>
-			<button class="accordion" id="imgCorso" > 
-				<img id="imgpowerpump" src="../IMAGES/powerpump.jpg" alt="Foto Power Pump"/>
-				<h1 id="powerpump"> POWER PUMP </h1>
-				<div class="panel">
-					<p>TONIFICAZIONE - MODELLAMENTO DELLA FIGURA - GLUTEI SODI E TONICI - AUMENTO RESISTENZA</p>
-					<p>Corso di gruppo divertente e completo per dimagrire e tonificarsi su base muscolare.<br><br>Un allenamento mirano alla tonificazione muscolare e delle forza resistente attraverso il costante utilizzo del bilanciere a peso regolabile, cavigliere e pesetti, squat, trazioni, distensioni, spinte con colonne sonore che allieteranno la lezione.<br><br>Esercizi completi ti faranno riscoprire il tuo corpo, donando nuova energia e vitalit&agrave alla tua figura.<br>La lezione dura 45 minuti.</p>
-				</div>
-			</button>
-		</li>
-		<li>
-			<button id="imgCorso" class="accordion"> 
-				<img id="imgspinning" src="../IMAGES/spinning.jpg" alt="Foto Spinning"/>
-				<h1 id="spinning"> SPINNING </h1>
-				<div class="panel">
-					<p>GRUPPO - DIVERTIMENTO - BICICLETTA STAZIONARIA - INTENSIT&Agrave PEDALATA - CONSUMO CALORICO</p>
-					<p>Lo spinning &egrave una attivit&agrave aerobica di gruppo, divertente e coinvolgente, attraverso dei percorsi virtuali creati con video e tour paesaggistici, con l'iscritto utilizzando una bicicletta stazionaria, pu&ograve migliorare le proprie capacit&agrave organiche attraverso concentrazione e coinvolgimento portando la mente a superare la fatica fisica.<br><br>La pedalata a varie velocit&agrave, diretta dall'Istruttore e unita alla tecnica di concentrazione e coinvolgimento del gruppo, rendono piacevole e divertente la lezione.<br><br> Le lezioni durano 45 minuti e grazie all'ottimo allenamento aerobico portano a un grosso dispendio calorico (500-800 caloreie a lezione).</p>
-				</div>
-			</button>
-		</li>
-		<li>
-			<button id="imgfitboxe" class="accordion"> 
-				<img id="imgfitboxe" src="../IMAGES/fitboxe.jpg" alt="Foto Fit Boxe"/>
-				<h1 id="fitboxe"> FITBOX </h1>
-				<div class="panel">
-					<p> DIMAGRIRE - PREVENIRE MALATTIA CARDIOVASCOLARI - RASSODARE - RILLASSARSI E SCARICARE TENSIONI- DIVERTIRSI - IMPARARE A DIFENDERSI</p>
-					<p>Attivit&agrave di gruppo: esplosiva, divertente e liberatoria. <br><br>Ogni lezione unisce l'aerobica alle arti marziali. Calci, pugni, ginocchiate, gomitate in un coinvolgente crescendo muscolare che trasforma le tecniche di combattimento in una danza fatale.<br><br>
-					Questa disciplina, giocosa e coinvolgente, consente di scaricare in maniera positiva l'aggressivit&agrave accumulata nella vita di tutti i giorni. Il risultato &egrave un mix di benessere e piacere che ci permette di essere in forma imparando a difendersi.<br><br>
-					&Egrave uno sport praticabile ad ogni et&agrave, migliora la forma fisica attraverso un allenamento aerobico. La lezione dura 45 minuti.</p>
-				</div>
-			</button>
-		</li>
-		<li>
-			<button id="imgCorso" class="accordion"> 
-				<img id="imgjumpfit" src="../IMAGES/jumpfit.jpg" alt="Foto Jumpfit"/>
-				<h1 id="jumpfit"> JUMP FIT </h1>
-				<div class="panel">
-					<p>DIVERTIMENTO - TONIFICAZIONE - SENSO DI EQUILIBRIO - BRUCIARE GRASSO - SVAGO ASSOLUTO</p>
-					<p>Attivit&agrave aerobica di gruppo ad impatto zero che incrementa la circolazione del sangue e aumenta le capacit&agrave di cuore e polmoni.<br><br> Migliora il senso di equilibrio; rinforza i vostri uscoli; fornisce un effetto aerobico; vi distende quando siete tesi e vi rimette in forma quando siete stanchi. Ottimo per perdere peso velocemente divertendosi. Le articolazioni si rafforzano senza subire lo stress del impatto a terra.<br><br> Ideale a tutte le et&agrave, per chu vuole rimettersi in forma e bruciare grasso e calorie ritorndando bambino.<br><br> Salti a ritmo di musica allieteranno l'allenamento della durata di 45 minuti.</p>
-				</div>
-			</button>
-		</li>
-		<li>
-			<button id="imgCorso" class="accordion"> 
-				<img id="imgstep" src="../IMAGES/step.jpg" alt="Foto Step"/>
-				<h1 id="step"> STEP </h1>
-				<div class="panel">
-					<p>PERDITA DI PESO - DIVERTIMENTO - TONIFICAZIONE - AUMENTO COORDINAZIONE</p>
-					<p>La lezione di step prevede una serie di esercizi dinamici di salita e discesa dalla piattaforma seguendo un ritmo costante scandito dalla musica e dai comandi dell'istruttore.<br><br> L'attivit&agrave eseguita sullo step migliora l'efficienza dell'apparato cardio-vascolare e nello stesso tempo si agisce sullo stato tonico-trofico degli arti inferiori con un lavoro di alta intensit&agrave, ma a basso impatto.<br><br> Ogni lezione ha durata pari a 45 minuti. Le coreografie permettono di divertirsi e scaricare gli stress producendo un ottimo consumo calorico. Alla fine di ogni lezione daremo spazio ad esercizi per glutei e addominali. Divertimento assicurato e risultati evidenti.</p>
-				</div>
-			</button>
-		</li>
-	</ul>
-
+		<div id="sfondocorsipalestra">
+			<img id="imagecorsipalestra" src="../IMAGES/CorsiPalestra.jpg" alt="Immagine Corsi Palestra"/>
+			<h1 id="titolocorsipalestra">CORSI</h1>
+		</div>
+		<ul id="AccordionMenu"> 
+			<li>
+				<button class="accordion" id="imgCorso" > 
+					<img id="imgpowerpump" src="../IMAGES/powerpump.jpg" alt="Foto Power Pump"/>
+					<h1 id="powerpump"> POWER PUMP </h1>
+					<div class="panel">
+						<p>TONIFICAZIONE - MODELLAMENTO DELLA FIGURA - GLUTEI SODI E TONICI - AUMENTO RESISTENZA</p>
+						<p>Corso di gruppo divertente e completo per dimagrire e tonificarsi su base muscolare.<br><br>Un allenamento mirano alla tonificazione muscolare e delle forza resistente attraverso il costante utilizzo del bilanciere a peso regolabile, cavigliere e pesetti, squat, trazioni, distensioni, spinte con colonne sonore che allieteranno la lezione.<br><br>Esercizi completi ti faranno riscoprire il tuo corpo, donando nuova energia e vitalit&agrave alla tua figura.<br>La lezione dura 45 minuti.</p>
+					</div>
+				</button>
+			</li>
+			<li>
+				<button id="imgCorso" class="accordion"> 
+					<img id="imgspinning" src="../IMAGES/spinning.jpg" alt="Foto Spinning"/>
+					<h1 id="spinning"> SPINNING </h1>
+					<div class="panel">
+						<p>GRUPPO - DIVERTIMENTO - BICICLETTA STAZIONARIA - INTENSIT&Agrave PEDALATA - CONSUMO CALORICO</p>
+						<p>Lo spinning &egrave una attivit&agrave aerobica di gruppo, divertente e coinvolgente, attraverso dei percorsi virtuali creati con video e tour paesaggistici, con l'iscritto utilizzando una bicicletta stazionaria, pu&ograve migliorare le proprie capacit&agrave organiche attraverso concentrazione e coinvolgimento portando la mente a superare la fatica fisica.<br><br>La pedalata a varie velocit&agrave, diretta dall'Istruttore e unita alla tecnica di concentrazione e coinvolgimento del gruppo, rendono piacevole e divertente la lezione.<br><br> Le lezioni durano 45 minuti e grazie all'ottimo allenamento aerobico portano a un grosso dispendio calorico (500-800 caloreie a lezione).</p>
+					</div>
+				</button>
+			</li>
+			<li>
+				<button id="imgfitboxe" class="accordion"> 
+					<img id="imgfitboxe" src="../IMAGES/fitboxe.jpg" alt="Foto Fit Boxe"/>
+					<h1 id="fitboxe"> FITBOX </h1>
+					<div class="panel">
+						<p> DIMAGRIRE - PREVENIRE MALATTIA CARDIOVASCOLARI - RASSODARE - RILLASSARSI E SCARICARE TENSIONI- DIVERTIRSI - IMPARARE A DIFENDERSI</p>
+						<p>Attivit&agrave di gruppo: esplosiva, divertente e liberatoria. <br><br>Ogni lezione unisce l'aerobica alle arti marziali. Calci, pugni, ginocchiate, gomitate in un coinvolgente crescendo muscolare che trasforma le tecniche di combattimento in una danza fatale.<br><br>
+						Questa disciplina, giocosa e coinvolgente, consente di scaricare in maniera positiva l'aggressivit&agrave accumulata nella vita di tutti i giorni. Il risultato &egrave un mix di benessere e piacere che ci permette di essere in forma imparando a difendersi.<br><br>
+						&Egrave uno sport praticabile ad ogni et&agrave, migliora la forma fisica attraverso un allenamento aerobico. La lezione dura 45 minuti.</p>
+					</div>
+				</button>
+			</li>
+			<li>
+				<button id="imgCorso" class="accordion"> 
+					<img id="imgjumpfit" src="../IMAGES/jumpfit.jpg" alt="Foto Jumpfit"/>
+					<h1 id="jumpfit"> JUMP FIT </h1>
+					<div class="panel">
+						<p>DIVERTIMENTO - TONIFICAZIONE - SENSO DI EQUILIBRIO - BRUCIARE GRASSO - SVAGO ASSOLUTO</p>
+						<p>Attivit&agrave aerobica di gruppo ad impatto zero che incrementa la circolazione del sangue e aumenta le capacit&agrave di cuore e polmoni.<br><br> Migliora il senso di equilibrio; rinforza i vostri uscoli; fornisce un effetto aerobico; vi distende quando siete tesi e vi rimette in forma quando siete stanchi. Ottimo per perdere peso velocemente divertendosi. Le articolazioni si rafforzano senza subire lo stress del impatto a terra.<br><br> Ideale a tutte le et&agrave, per chu vuole rimettersi in forma e bruciare grasso e calorie ritorndando bambino.<br><br> Salti a ritmo di musica allieteranno l'allenamento della durata di 45 minuti.</p>
+					</div>
+				</button>
+			</li>
+			<li>
+				<button id="imgCorso" class="accordion"> 
+					<img id="imgstep" src="../IMAGES/step.jpg" alt="Foto Step"/>
+					<h1 id="step"> STEP </h1>
+					<div class="panel">
+						<p>PERDITA DI PESO - DIVERTIMENTO - TONIFICAZIONE - AUMENTO COORDINAZIONE</p>
+						<p>La lezione di step prevede una serie di esercizi dinamici di salita e discesa dalla piattaforma seguendo un ritmo costante scandito dalla musica e dai comandi dell'istruttore.<br><br> L'attivit&agrave eseguita sullo step migliora l'efficienza dell'apparato cardio-vascolare e nello stesso tempo si agisce sullo stato tonico-trofico degli arti inferiori con un lavoro di alta intensit&agrave, ma a basso impatto.<br><br> Ogni lezione ha durata pari a 45 minuti. Le coreografie permettono di divertirsi e scaricare gli stress producendo un ottimo consumo calorico. Alla fine di ogni lezione daremo spazio ad esercizi per glutei e addominali. Divertimento assicurato e risultati evidenti.</p>
+					</div>
+				</button>
+			</li>
+		</ul>
 	</div>
 
 	<div id="Footer">
