--- a/HTML/Galleria.html
+++ b/HTML/Galleria.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
-	<title>Dove Siamo | Body Evolution</title>
+	<title>Galleria | Body Evolution</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
@@ -20,44 +20,19 @@
 					<li><a href="Palestra.html">Palestra</a></li>
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
-					<li><a href="Galleria.html">Galleria</a></li>
+					<li><a class="active" href="Galleria.html">Galleria</a></li>
 					<li><a href="Calendario.html">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
-					<li><a class="active" href="DoveSiamo.html">Dove siamo</a></li>
+					<li><a href="DoveSiamo.html">Dove siamo</a></li>
 					<li><a href="AreaPersonale.html">Area Personale</a></li>
 				</ul>
 			</div>
 		</div>
 		
 		<div id="Descrizione">
-			<div id="sfondodovesiamo">
-				<img id="imagedovesiamo" src="../IMAGES/DoveSiamo.jpg" alt="Immagine Dove Siamo"/>
-				<h1 id="titolodovesiamo">DOVE SIAMO</h1>
-			</div>
-			<div id="GoogleMaps">
-				<div id="map"></div>
-				<script>
-					function myMap() {
-						var mapCanvas = document.getElementById("map");
-						var myCenter = new google.maps.LatLng(45.13985388501425,12.086511254310608); 
-						var mapOptions = {center: myCenter, zoom: 16};
-						var map = new google.maps.Map(mapCanvas,mapOptions);
-						var marker = new google.maps.Marker({
-							position: myCenter,
-							animation: google.maps.Animation.BOUNCE
-						});
-						marker.setMap(map);
-						//Zoom a 18 quando si clicca nel marker 
-						google.maps.event.addListener(marker,'click',function() {
-						map.setZoom(18);
-						map.setCenter(marker.getPosition());
-						});
-					}
-				</script>
-				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy9ePX9YzCd4SvN7AJ8oNL6-2uue4rh6g&callback=myMap"></script>
-				<h2>INDIRIZZO</h2>
-				<div class="separator"></div>
-				<p>Via Cavour 18, 30014 - Cavarzere (VE)</p>
+			<div id="sfondogalleria">
+				<img id="imagegalleria" src="../IMAGES/Galleria.jpg" alt="Immagine Galleria"/>
+				<h1 id="titologalleria">GALLERIA</h1>
 			</div>
 		</div>
 
