--- a/HTML/Palestra.html
+++ b/HTML/Palestra.html
@@ -125,22 +125,28 @@
 				<a href="https://it-it.facebook.com/BodyEvolutionPalestra"><img id="logofacebook" src="../IMAGES/facebook.png" alt="Link pagina Facebook"/></a>
 			</div>
 			<div id="footercx">
-				<h3>PARCHEGGIO</h3>
-				<p>Con oltre 100 posti auto ed aree dedicate alle moto e alle biciclette a disposizione dei soci.
-				Disponibile in tutti gli orari d’apertura del Club, vi si può accedere solo confermando la validità 
-				del proprio abbonamento tramite appositi lettori posti sia in entrata che in uscita.</p>
+				<h3>INFORMAZIONI</h3>
+				<ul>
+					<li>Prova GRATUITA per tutti i nuovi amici</li>
+					<li>SCHEDE di allenamento personalizzate e gratuite</li>
+					<li>Vasto parco macchine su 400 mq di sala fitness</li>
+					<li>Istruttori qualificati sempre presenti</li>
+					<li>Ampia scelta di corsi in pi&ugrave; fasce orarie</li>
+					<li>Sala corsi attrezzata su 280 mq</li>
+					<li>Ampio parcheggio</li>
+				</ul>
 			</div>
 			<div id="footerdx">
 				<img id="Coni" src="../IMAGES/Coni.png" alt="Affiliazione Coni"/>
 				<img id="asi" src="../IMAGES/Asi.png" alt="Affiliazione asi"/>
-				<p>La “TO FIT SSD a r.l.” è una società senza scopo di lucro affiliata agli enti/federazioni di promozione
-				sportiva riconosciuti dal CONI come: ASI – Associazioni Sportive Sociali Italiane – affiliazione n. EPS VEN-PD0947
-				registro Coni n. 241585. L’attività di propaganda è in funzione agli scopi istituzionali e necessaria per lo sviluppo
-				e la divulgazione dello Sport dilettantistico nazionale. Per coloro che fanno domanda per la pratica dell’attività 
-				istituzionale la società provvederà al tesseramento di questi ad una delle federazioni o enti sportivi a cui è affiliata.
+				<p>La “BODY EVOLUTION A.S.D” &egrave; un'associazione senza scopo di lucro affiliata agli enti/federazioni di promozione
+				sportiva riconosciuti dal CONI come: ASI – Associazioni Sportive Sociali Italiane – affiliazione n. EPS VEN-VE0093
+				registro Coni n. 77776. L’attivit&agrave; di propaganda &egrave; in funzione agli scopi istituzionali e necessaria per lo sviluppo
+				e la divulgazione dello Sport dilettantistico nazionale. Per coloro che fanno domanda per la pratica dell’attivit&agrave; 
+				istituzionale la società provveder&agrave; al tesseramento di questi ad una delle federazioni o enti sportivi a cui &egrave; affiliata.
 			</div>
 			<div id="footerbottom">
-				<p><span xml:lang="en">Copyright</span>&copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> a.s.d. - 
+				<p><span xml:lang="en">Copyright</span>&copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> A.S.D. - 
 				<span xml:lang="en">All rights reserved</span></p>
 			</div>
 		</div>
