--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -24,7 +24,7 @@
 					<li><a class="active" href="Calendario.html">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
 					<li><a href="DoveSiamo.html">Dove siamo</a></li>
-					<li><a href="AreaPersonale.html"><nobr>Area Personale</nobr></a></li>
+					<li><a href="AreaPersonale.html">Area Personale</a></li>
 				</ul>
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 
 		<div id="Footer">
 			<div id="footersx">
-				<img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/>
+				<a href="Home.html"><img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 				<p><span class="blocco">Via Cavour, 18</span>
 				<span class="blocco">30014 Cavarzere (VE)</span>
 				<span class="blocco">tel. 340 9473426</span>
