--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -7,7 +7,7 @@
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 			</div>
 			<div id="GoogleMaps">
 				<div id="map"></div>
-				<script>
+				<script type="text/javascript">
 					function myMap() {
 						var mapCanvas = document.getElementById("map");
 						var myCenter = new google.maps.LatLng(45.13985388501425,12.086511254310608); 
@@ -63,7 +63,7 @@
 
 		<div id="Footer">
 			<div id="footersx">
-				<img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
+				<a href="Home.html"><img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 				<p><span class="blocco">Via Cavour, 18</span>
 				<span class="blocco">30014 Cavarzere (VE)</span>
 				<span class="blocco">tel. 340 9473426</span>
@@ -93,7 +93,7 @@
 				sportiva riconosciuti dal CONI come: ASI – Associazioni Sportive Sociali Italiane – affiliazione n. EPS VEN-VE0093
 				registro Coni n. 77776. L’attivit&agrave; di propaganda &egrave; in funzione agli scopi istituzionali e necessaria per lo sviluppo
 				e la divulgazione dello Sport dilettantistico nazionale. Per coloro che fanno domanda per la pratica dell’attivit&agrave; 
-				istituzionale la società provveder&agrave; al tesseramento di questi ad una delle federazioni o enti sportivi a cui &egrave; affiliata.
+				istituzionale la società provveder&agrave; al tesseramento di questi ad una delle federazioni o enti sportivi a cui &egrave; affiliata.</p>
 			</div>
 			<div id="footerbottom">
 				<p><span xml:lang="en">Copyright</span>&copy; 2018 Palestra <span xml:lang="en">BODY EVOLUTION</span> A.S.D. - 
