--- a/HTML/Palestra.html
+++ b/HTML/Palestra.html
@@ -21,10 +21,10 @@
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
 					<li><a href="Galleria.html">Galleria</a></li>
-					<li><a href="#alendario.html">Calendario</a></li>
+					<li><a href="Calendario.html">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
 					<li><a href="DoveSiamo.html">Dove siamo</a></li>
-					<li><a href="AreaPersonale.html"><nobr>Area Personale</nobr></a></li>
+					<li><a href="AreaPersonale.html">Area Personale</a></li>
 				</ul>
 			</div>
 		</div>
@@ -115,9 +115,10 @@
 				</div>
 			</div>
 		</div>
+		
 		<div id="Footer">
 			<div id="footersx">
-				<img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/>
+				<a href="Home.html"><img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 				<p><span class="blocco">Via Cavour, 18</span>
 				<span class="blocco">30014 Cavarzere (VE)</span>
 				<span class="blocco">tel. 340 9473426</span>
