--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -30,7 +30,52 @@
 		</div>
 		
 		<div id="Descrizione">
-			<img id="Sfondo" src="../IMAGES/Sfondo.jpg" alt="Sfondo temporaneo"/>
+			<div id="slideshow">
+				<div class="slide">
+				  <img id="immagineslide" src="../IMAGES/slide1.jpg" alt="Immagine Body Evolution"/>
+				  <div class="titolo">PALESTRA BODY EVOLUTION</div>
+				</div>
+				<div class="slide">
+				  <img id="immagineslide" src="../IMAGES/slide2.jpg" alt="Immagine sala fitness"/>
+				  <div class="titolo">AMPIA SALA FITNESS</div>
+				</div>
+				<div class="slide">
+				  <img id="immagineslide" src="../IMAGES/slide3.jpg" alt="Immagine corsi"/>
+				  <div class="titolo">NUMEROSI CORSI</div>
+				</div>
+				<div class="slide">
+				  <img id="immagineslide" src="../IMAGES/slide4.jpg" alt="Immagine team"/>
+				  <div class="titolo">OTTIMO TEAM</div>
+				</div>
+			</div>
+			<div id="punti">
+				<span class="punto"></span> 
+				<span class="punto"></span> 
+				<span class="punto"></span>
+				<span class="punto"></span>
+			</div>	
+			<script>
+				var indice = 0;
+				showSlides();
+				function showSlides() {
+					var i;
+					var slides = document.getElementsByClassName("slide");
+					var punti = document.getElementsByClassName("punto");
+					for (i = 0; i < slides.length; i++) {
+					   slides[i].style.display = "none";  
+					}
+					indice++;
+					if (indice > slides.length) {
+						indice = 1;
+					}
+					for (i = 0; i < punti.length; i++) {
+						punti[i].className = punti[i].className.replace(" active", "");
+					}
+					slides[indice-1].style.display = "block";  
+					punti[indice-1].className += " active";
+					setTimeout(showSlides, 5000);
+				}
+			</script>
 		</div>
 
 		<div id="Footer">
