--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -32,19 +32,19 @@
 		<div id="Descrizione">
 			<div id="slideshow">
 				<div class="slide">
-				  <img id="immagineslide" src="../IMAGES/slide1.jpg" alt="Immagine Body Evolution"/>
+				  <img class="immagineslide" src="../IMAGES/slide1.jpg" alt="Immagine Body Evolution"/>
 				  <div class="titolo">PALESTRA BODY EVOLUTION</div>
 				</div>
 				<div class="slide">
-				  <img id="immagineslide" src="../IMAGES/slide2.jpg" alt="Immagine sala fitness"/>
+				  <img class="immagineslide" src="../IMAGES/slide2.jpg" alt="Immagine sala fitness"/>
 				  <div class="titolo">AMPIA SALA FITNESS</div>
 				</div>
 				<div class="slide">
-				  <img id="immagineslide" src="../IMAGES/slide3.jpg" alt="Immagine corsi"/>
+				  <img class="immagineslide" src="../IMAGES/slide3.jpg" alt="Immagine corsi"/>
 				  <div class="titolo">NUMEROSI CORSI</div>
 				</div>
 				<div class="slide">
-				  <img id="immagineslide" src="../IMAGES/slide4.jpg" alt="Immagine team"/>
+				  <img class="immagineslide" src="../IMAGES/slide4.jpg" alt="Immagine team"/>
 				  <div class="titolo">OTTIMO TEAM</div>
 				</div>
 			</div>
@@ -54,7 +54,7 @@
 				<span class="punto"></span>
 				<span class="punto"></span>
 			</div>	
-			<script>
+			<script type="text/javascript">
 				var indice = 0;
 				showSlides();
 				function showSlides() {
