--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -28,8 +28,12 @@
 				</ul>
 			</div>
 		</div>
+		<h1 id="caltitle">CALENDARIO</h1>
+		<img id="imgcal" src="../IMAGES/img3.png" alt="sfondo pagina calendario palestra"/>
 		
 		<table id="calendario">
+			<tr id="firstrow">
+				<th></th><th>Lunedì</th><th>Martedì</th><th>Mercoledì</th><th>Giovedì</th><th>Venerdì</th><th>Sabato/Domenica</th>
 			<tr>
 				<td>10:15-11:15</td>
 				<td class="spinning"><a href="spinning.html">SPINNING</a></td>
