--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<h1 id="caltitle">CALENDARIO</h1>
-		<img id="imgcal" src="../IMAGES/img3.png" alt="sfondo pagina calendario palestra"/>
+		<img id="imgcal" src="../IMAGES/sfondocalendario.png" alt="sfondo pagina calendario palestra"/>
 		
 		<table id="calendario">
 			<tr id="firstrow">
