--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -21,7 +21,7 @@
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
 					<li><a href="Galleria.html">Galleria</a></li>
-					<li><a class="active" href="Calendario.html">Calendario</a></li>
+					<li><a class="active">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
 					<li><a href="DoveSiamo.html">Dove siamo</a></li>
 					<li><a href="AreaPersonale.html">Area Personale</a></li>
