--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -23,7 +23,7 @@
 					<li><a href="Galleria.html">Galleria</a></li>
 					<li><a href="Calendario.html">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
-					<li><a class="active" href="DoveSiamo.html">Dove siamo</a></li>
+					<li><a class="active">Dove siamo</a></li>
 					<li><a href="AreaPersonale.html">Area Personale</a></li>
 				</ul>
 			</div>
