--- a/HTML/Galleria.html
+++ b/HTML/Galleria.html
@@ -20,7 +20,7 @@
 					<li><a href="Palestra.html">Palestra</a></li>
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
-					<li><a class="active" href="Galleria.html">Galleria</a></li>
+					<li><a class="active">Galleria</a></li>
 					<li><a href="Calendario.html">Calendario</a></li>
 					<li><a href="ChiSiamo.html">Chi siamo</a></li>
 					<li><a href="DoveSiamo.html">Dove siamo</a></li>
