--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -16,7 +16,7 @@
 			<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 			<div id="Menu">
 				<ul>
-					<li><a class="active" href="Home.html">Home</a></li>
+					<li><a class="active">Home</a></li>
 					<li><a href="Palestra.html">Palestra</a></li>
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
