--- a/HTML/Palestra.html
+++ b/HTML/Palestra.html
@@ -17,7 +17,7 @@
 			<div id="Menu">
 				<ul>
 					<li><a href="Home.html">Home</a></li>
-					<li><a class="active" href="Palestra.html">Palestra</a></li>
+					<li><a class="active">Palestra</a></li>
 					<li><a href="Attivita.html">Attivit&agrave;</a></li>
 					<li><a href="News.html"><span xml:lang="en">News</span></a></li>
 					<li><a href="Galleria.html">Galleria</a></li>
