--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -8,6 +8,7 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<script type="text/javascript" src="../JS/Popup.js" async></script>
 </head>
 
 <body>
@@ -78,15 +79,6 @@
 				</div>
 			</form>
 		</div>
-
-		<script type="text/javascript">
-			var popup = document.getElementById('login');
-			window.onclick = function(event) {
-				if (event.target == popup) {
-					popup.style.display = "none";
-				}
-			}
-		</script>
 
 		<div id="Footer">
 			<div id="footersx">
