--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -8,6 +8,9 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<script type="text/javascript" src="../JS/Popup.js" async></script>
+	<script type="text/javascript" src="../JS/Maps.js" async></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy9ePX9YzCd4SvN7AJ8oNL6-2uue4rh6g&callback=myMap" async></script>
 </head>
 
 <body>
@@ -36,25 +39,6 @@
 			</div>
 			<div id="GoogleMaps">
 				<div id="map"></div>
-				<script type="text/javascript">
-					function myMap() {
-						var mapCanvas = document.getElementById("map");
-						var myCenter = new google.maps.LatLng(45.13985388501425,12.086511254310608); 
-						var mapOptions = {center: myCenter, zoom: 16};
-						var map = new google.maps.Map(mapCanvas,mapOptions);
-						var marker = new google.maps.Marker({
-							position: myCenter,
-							animation: google.maps.Animation.BOUNCE
-						});
-						marker.setMap(map);
-						//Zoom a 18 quando si clicca nel marker 
-						google.maps.event.addListener(marker,'click',function() {
-						map.setZoom(18);
-						map.setCenter(marker.getPosition());
-						});
-					}
-				</script>
-				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy9ePX9YzCd4SvN7AJ8oNL6-2uue4rh6g&callback=myMap"></script>
 				<h2>INDIRIZZO</h2>
 				<div class="separator"></div>
 				<p>Via Cavour 18, 30014 - Cavarzere (VE)</p>
@@ -76,15 +60,6 @@
 				</div>
 			</form>
 		</div>
-
-		<script type="text/javascript">
-			var popup = document.getElementById('login');
-			window.onclick = function(event) {
-				if (event.target == popup) {
-					popup.style.display = "none";
-				}
-			}
-		</script>
 
 		<div id="Footer">
 			<div id="footersx">
