--- a/HTML/Palestra.html
+++ b/HTML/Palestra.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<div id="sfondopalestra">
-			<img id="imagepalestra" src="../IMAGES/Sfondopalestra.png" alt="Immagine di sfondo della pagina Palestra"/>
+			<img id="imagepalestra" src="../IMAGES/SfondoPalestra.png" alt="Immagine di sfondo della pagina Palestra"/>
 			<h1 id="titolopalestra">LA PALESTRA </h1>
 		</div>
 		<div id="DescrizionePalestra">
