--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -37,7 +37,7 @@
 		<div id="DescrizioneAttivita">
 			
 		<div id="colorpower">
-			<button id="powerpump" class="accordion button">POWER PUMP</button>
+			<button id="powerpump" class="accordion">POWER PUMP</button>
 			<div class="panel">
 				<p>TONIFICAZIONE - MODELLAMENTO DELLA FIGURA - GLUTEI SODI E TONICI - AUMENTO RESISTENZA</p>
 				<p>Corso di gruppo divertente e completo per <span class="bold">dimagrire</span> e tonificarsi su base muscolare.<br><br>Un allenamento mirano alla <span class="bold">tonificazione</span> muscolare e delle forza resistente attraverso il costante utilizzo del bilanciere a peso regolabile, cavigliere e pesetti, squat, trazioni, distensioni, spinte con colonne sonore che allieteranno la lezione.<br><br>Esercizi completi ti faranno riscoprire il tuo corpo, donando nuova <span class="bold">energia e vitalit&agrave</span> alla tua figura.<br>La lezione dura <span class="bold">45 minuti</span>.</p>
