--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -88,8 +88,8 @@
 				</div>
 				<div class="container">
 					<h2>ACCESSO <span class="bold">ALL'AREA PERSONALE</span></h2>
-					<input type="text" name="uname" placeholder="USERNAME" required="required"/>
-					<input type="password" name="psw" placeholder="PASSWORD" required="required"/>
+					<input class="loginput" type="text" name="uname" placeholder="USERNAME" required="required"/>
+					<input class="loginput" type="password" name="psw" placeholder="PASSWORD" required="required"/>
 					<button type="submit">LOGIN</button>
 					<div id="password"><a href="#">PASSWORD DIMENTICATA?</a></div>
 				</div>
