--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script type="text/javascript" src="../JS/Slider.js" async></script>
 	<script type="text/javascript" src="../JS/Popup.js" async></script>
+	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
 <body>
@@ -30,18 +31,6 @@
 				<button onclick="document.getElementById('login').style.display='block'">Area Personale</button>
 			</div>
 		</div>
-		
-		<script>
-			function myFunction() {
-				var x = document.getElementById("myMenu");
-				if (x.className === "Menu") {
-					x.className += " responsive";
-				} 
-				else {
-					x.className = "Menu";
-				}
-			}
-		</script>
 		
 		<div id="Descrizione">
 			<div id="slideshow">
