--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -34,8 +34,12 @@
 		
 		<div id="PresentazioneAttivita">
 				<h1 id="titolocorsipalestra">ATTIVIT&Agrave</h1>
-				<p> Scegli il corso per saperne di pi&ugrave </p>
+				<p> Alla <span lang="en">Body Evolution</span> ti offriamo svariate attivit&agrave per migliorare la tua forma!<br />Scegli un corso per saperne di pi&ugrave </p>
 		</div>
+
+		<noscript id="noscriptAttivita">
+			<p>Sembra tu non abbia abilitato JavaScript!<br /> Attivalo per vedere al meglio i corsi che ti offriamo!<br /></p>
+		</noscript>
 
 		<div id="DescrizioneAttivita">
 			
