--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -20,9 +20,8 @@
 			<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 			<a onclick="document.getElementById('login').style.display='block'"><img id="user" src="../IMAGES/user.png" alt="login utente"/></a>
 			<div class="Menu" id="myMenu">
-				<a class="active">Home</a>
-				<a href="Palestra.html">Palestra</a>
-				<a href="Attivita.html">Attivit&agrave;</a>
+				<a href="Home.html">Home</a>
+				<a class="active">Attivit&agrave;</a>
 				<a href="News.html"><span xml:lang="en">News</span></a>
 				<a href="Galleria.html">Galleria</a>
 				<a href="Calendario.html">Calendario</a>
