--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -21,14 +21,13 @@
 			<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 			<a onclick="document.getElementById('login').style.display='block'"><img id="user" src="../IMAGES/user.png" alt="login utente"/></a>
 			<div class="Menu" id="myMenu">
-				<a class="active">Home</a>
-				<a href="Palestra.html">Palestra</a>
+				<a href="Home.html">Home</a>
 				<a href="Attivita.html">Attivit&agrave;</a>
 				<a href="News.html"><span xml:lang="en">News</span></a>
 				<a href="Galleria.html">Galleria</a>
 				<a href="Calendario.html">Calendario</a>
 				<a href="ChiSiamo.html">Chi siamo</a>
-				<a href="DoveSiamo.html">Dove siamo</a>
+				<a class="active">Dove siamo</a>
 				<button onclick="document.getElementById('login').style.display='block'">Area Personale</button>
 			</div>
 		</div>
