--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -31,8 +31,8 @@
 			</div>
 		</div>
 		
-		<div id="PresentazioneAttivita">
-				<h1 id="titolocorsipalestra">ATTIVIT&Agrave</h1>
+		<div id="Presentazione">
+				<h1 id="titoloPagina">ATTIVIT&Agrave</h1>
 				<p> Alla <span lang="en">Body Evolution</span> ti offriamo svariate attivit&agrave per migliorare la tua forma!<br />Scegli un corso per saperne di pi&ugrave </p>
 		</div>
 
