--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -30,38 +30,42 @@
 			</div>
 		</div>
 		
-		<h1 id="caltitle">CALENDARIO</h1>
-		<img id="imgcal" src="../IMAGES/sfondocalendario.png" alt="sfondo pagina calendario palestra"/>
+		<div id="Presentazione">
+				<h1 id="titoloPagina">CALENDARIO</h1>
+				<p> Guarda gli orari dei corsi offerti alla <span lang="en">Body Evolution</span>!</p>
+				<img id="imgcal" src="../IMAGES/sfondocalendario.png" alt="sfondo pagina calendario palestra"/>
+		</div>
+		
 		
 		<table id="calendario">
 			<tr id="firstrow">
 				<th></th><th>Lunedì</th><th>Martedì</th><th>Mercoledì</th><th>Giovedì</th><th>Venerdì</th><th>Sabato/Domenica</th>
 			<tr>
 				<td>10:15-11:15</td>
-				<td class="spinning"><a href="spinning.html">SPINNING</a></td>
+				<td class="spinning"><a href="Attivita.html#spinning">SPINNING</a></td>
 				<td></td>
-				<td class="powerpump"><a href="powerpump.html">POWER PUMP</a></td>
-				<td class="jumpfit"><a href="jumpfit.html">JUMP FIT</a></td>
+				<td class="powerpump"><a href="Attivita.html#powerpump">POWER PUMP</a></td>
+				<td class="jumpfit"><a href="Attivita.html#jumpfit">JUMP FIT</a></td>
 				<td></td>
-				<td>SOLO SALA FITNESS</td>
+				<td></td>
 			</tr>
 			<tr>
 				<td>19:00-19:45</td>
-				<td class="step"><a href="step.html">STEP</a></td>
-				<td class="spinning"><a href="spinning.html">SPINNING</a></td>
-				<td class="step"><a href="step.html">STEP</a></td>
-				<td class="powerpump"><a href="powerpump.html">POWER PUMP</a></td>
-				<td class="spinning"><a href="spinning.html">SPINNING</a></td>
-				<td>SOLO SALA FITNESS</td>
+				<td class="step"><a href="Attivita.html#step">STEP</a></td>
+				<td class="spinning"><a href="Attivita.html#spinning">SPINNING</a></td>
+				<td class="step"><a href="Attivita.html#step">STEP</a></td>
+				<td class="powerpump"><a href="Attivita.html#powerpump">POWER PUMP</a></td>
+				<td class="spinning"><a href="Attivita.html#spinning">SPINNING</a></td>
+				<td></td>
 			</tr>
 			<tr>
 				<td>19:45-20:30</td>
-				<td class="jumpfit"><a href="jumpfit.html">JUMP FIT</a></td>
-				<td class="fitboxe"><a href="fitboxe.html">FIT BOXE</a></td>
-				<td class="jumpfit"><a href="jumpfit.html">JUMP FIT</a></td>
-				<td class="fitboxe"><a href="fitboxe.html">FIT BOXE</a></td>
-				<td class="spinning"><a href="spinning.html">SPINNING</a></td>
-				<td>SOLO SALA FITNESS</td>
+				<td class="jumpfit"><a href="Attivita.html#jumpfit">JUMP FIT</a></td>
+				<td class="fitboxe"><a href="Attivita.html#fitboxe">FIT BOXE</a></td>
+				<td class="jumpfit"><a href="Attivita.html#jumpfit">JUMP FIT</a></td>
+				<td class="fitboxe"><a href="Attivita.html#fitboxe">FIT BOXE</a></td>
+				<td class="spinning"><a href="Attivita.html#spinning">SPINNING</a></td>
+				<td></td>
 			</tr>
 		</table>
 		
