--- a/HTML/ChiSiamo.html
+++ b/HTML/ChiSiamo.html
@@ -31,8 +31,10 @@
 		</div>
 		
 		<div id="Descrizione">
+			<div id="Presentazione">
+				<h1 id="titoloPagina">CHI SIAMO</h1>
+			</div>
 			<div id="Istruttori">
-				<img id="ChiSiamoImg" src="../IMAGES/ChiSiamo.jpg" alt="Immagine Chi Siamo"/>
 				<div id="GennyTiengo">
 					<img id="GennyTiengoImg" src="../IMAGES/GennyTiengo.jpg" alt="Foto Genny Tiengo"/>
 					<h2>GENNY TIENGO</h2>
