--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -33,9 +33,9 @@
 		</div>
 		
 		<div id="Descrizione">
-			<div id="sfondodovesiamo">
-				<img id="imagedovesiamo" src="../IMAGES/DoveSiamo.jpg" alt="Immagine Dove Siamo"/>
-				<h1 id="titolodovesiamo">DOVE SIAMO</h1>
+			<div id="Presentazione">
+				<h1 id="titoloPagina">DOVE SIAMO</h1>
+				<p> Vieni a trovarci alla <span lang="en">Body Evolution</span>!</p>
 			</div>
 			<div id="GoogleMaps">
 				<div id="map"></div>
