--- a/HTML/Galleria.html
+++ b/HTML/Galleria.html
@@ -31,9 +31,8 @@
 		</div>
 		
 		<div id="Descrizione">
-			<div id="sfondogalleria">
-				<img id="imagegalleria" src="../IMAGES/Galleria.jpg" alt="Immagine Galleria"/>
-				<h1 id="titologalleria">GALLERIA</h1>
+			<div id="Presentazione">
+				<h1 id="titoloPagina">GALLERIA</h1>
 			</div>
 		</div>
 		
