--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -27,7 +27,7 @@
 				<a href="Calendario.html">Calendario</a>
 				<a href="ChiSiamo.html">Chi siamo</a>
 				<a href="DoveSiamo.html">Dove siamo</a>
-				<button onclick="document.getElementById('login').style.display='block'">Area Personale</button>
+				<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
 			</div>
 		</div>
 		
@@ -98,25 +98,7 @@
 				<p>La lezione di step prevede una serie di esercizi dinamici di <span class="bold">salita e discesa dalla piattaforma</span> seguendo un ritmo costante scandito dalla musica e dai comandi dell'istruttore.<br /><br /> L'attivit&agrave eseguita sullo step migliora l'efficienza dell'apparato <span class="bold">cardio-vascolare</span> e nello stesso tempo si agisce sullo stato tonico-trofico degli arti inferiori con un lavoro di alta intensit&agrave, ma a basso impatto.<br /><br /> Ogni lezione ha durata pari a <span class="bold">45 minuti</span>. Le coreografie permettono di divertirsi e scaricare gli stress producendo un ottimo <span class="bold">consumo calorico</span>. Alla fine di ogni lezione daremo spazio ad esercizi per <span class="bold">glutei e addominali</span>. Divertimento assicurato e risultati evidenti.</p>
 			</div>
 		</div>
-
 		</div>
-		
-		<div id="login" class="popup">
-			<form class="popup-content animate" action="/action_page.php">
-				<div class="imgcontainer">
-					<span onclick="document.getElementById('login').style.display='none'" class="close" title="Chiudi">&times;</span>
-					<img src="../IMAGES/logo.png" alt="logo palestra" class="logo"/>
-				</div>
-				<div class="container">
-					<h2>ACCESSO <span class="bold">ALL'AREA PERSONALE</span></h2>
-					<input class="loginput" type="text" name="uname" placeholder="USERNAME" required="required"/>
-					<input class="loginput" type="password" name="psw" placeholder="PASSWORD" required="required"/>
-					<button type="submit">LOGIN</button>
-					<div id="password"><a href="">PASSWORD DIMENTICATA?</a></div>
-				</div>
-			</form>
-		</div>
-
 
 		<div id="Footer">
 			<div id="footersx">
