--- a/HTML/Galleria.html
+++ b/HTML/Galleria.html
@@ -8,7 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Popup.js" async></script>
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
@@ -26,7 +25,7 @@
 				<a href="Calendario.html">Calendario</a>
 				<a href="ChiSiamo.html">Chi siamo</a>
 				<a href="DoveSiamo.html">Dove siamo</a>
-				<button onclick="document.getElementById('login').style.display='block'">Area Personale</button>
+				<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
 			</div>
 		</div>
 		
@@ -34,22 +33,6 @@
 			<div id="Presentazione">
 				<h1 id="titoloPagina">GALLERIA</h1>
 			</div>
-		</div>
-		
-		<div id="login" class="popup">
-			<form class="popup-content animate" action="/action_page.php">
-				<div class="imgcontainer">
-					<span onclick="document.getElementById('login').style.display='none'" class="close" title="Chiudi">&times;</span>
-					<img src="../IMAGES/logo.png" alt="logo palestra" class="logo"/>
-				</div>
-				<div class="container">
-					<h2>ACCESSO <span class="bold">ALL'AREA PERSONALE</span></h2>
-					<input class="loginput" type="text" name="uname" placeholder="USERNAME" required="required"/>
-					<input class="loginput" type="password" name="psw" placeholder="PASSWORD" required="required"/>
-					<button type="submit">LOGIN</button>
-					<div id="password"><a href="#">PASSWORD DIMENTICATA?</a></div>
-				</div>
-			</form>
 		</div>
 
 		<div id="Footer">
