--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
-<body>
+<body id="Attivita">
 	<div id="contenitore">
 		<div id="Intestazione">
 			<a class="sandwich" onclick="myFunction()">&#9776;</a>
